minor spacing fix for set search form h4

--- a/global_finprint/static/sass/project.scss
+++ b/global_finprint/static/sass/project.scss
@@ -158,6 +158,10 @@ form.trip-search {
   margin: 15px 0;
   padding: 0;
 
+  h4 {
+    margin-top: 15px;
+  }
+
   form select#id_reef {
     width: 215px;
   }
